--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
 		</p>
 		
 		<p >
-			Tôi có 4 người ngưỡng mộ trên thế giới đó là: Bill Gates, Stephen Hawking, Charlice Puth, Napoleon Bonaparte.	
+			Tôi có 4 người ngưỡng mộ trên thế giới đó là:
+			<ol>
+				<li>Bill Gates.</li>
+			 	<li>Stephen Hawking.</li>
+			 	<li>Charlice Puth.</li>
+			 	<li>Napoleon Bonaparte.</li>	
+			</ol>
 		</p>
 		
 
