--- a/studies.html
+++ b/studies.html
@@ -6,9 +6,53 @@
 		<meta charset="UTF-8">
 		<title>MyStudingStory</title>
 		<link rel="stylesheet" type="text/css" href="css/app.css">
-		
-</head>
-<body>
+	</head>
 
-</body>
+	<body>
+		<table>
+			<thead>
+					<tr>
+						<th>Year</th>
+						<th>School</th>
+						<th>Town</th>
+						<th>Country</th>
+					</tr>
+
+			</thead>
+
+			<tbody>
+					<tr>
+						<td>2002-2007</td>
+						<td>kindergaten</td>
+						<td>Quy Nhon City</td>
+						<td>Viet Nam</td>
+					</tr>
+					<tr>
+						<td>2007-2011</td>
+						<td>primary school</td>
+						<td>Quy Nhon City</td>
+						<td>Viet Nam</td>
+					</tr>
+					<tr>
+						<td>2011-2014</td>
+						<td>secondary school</td>
+						<td>Quy Nhon City</td>
+						<td>Viet Nam</td>
+					</tr>
+					<tr>
+						<td>2014-2016</td>
+						<td>high school</td>
+						<td>Quy Nhon City</td>
+						<td>Viet Nam</td>
+					</tr>
+					<tr>
+						<td>2016-Now</td>
+						<td>University</td>
+						<td>Da Nang City</td>
+						<td>Viet Nam</td>
+					</tr>
+			</tbody>
+
+		</table>
+	</body>
 </html>
