--- a/studies.html
+++ b/studies.html
@@ -5,7 +5,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>MyStudingStory</title>
+		<link rel="stylesheet" type="text/css" href="css/studies.css">
 		<link rel="stylesheet" type="text/css" href="css/app.css">
+
 	</head>
 
 	<body>
