--- a/studies.html
+++ b/studies.html
@@ -27,31 +27,27 @@
 						<td>2002-2007</td>
 						<td>kindergaten</td>
 						<td>Quy Nhon City</td>
-						<td>Viet Nam</td>
+						<td rowspan="5">Viet Nam</td>
 					</tr>
 					<tr>
 						<td>2007-2011</td>
 						<td>primary school</td>
 						<td>Quy Nhon City</td>
-						<td>Viet Nam</td>
 					</tr>
 					<tr>
 						<td>2011-2014</td>
 						<td>secondary school</td>
 						<td>Quy Nhon City</td>
-						<td>Viet Nam</td>
 					</tr>
 					<tr>
 						<td>2014-2016</td>
 						<td>high school</td>
 						<td>Quy Nhon City</td>
-						<td>Viet Nam</td>
 					</tr>
 					<tr>
 						<td>2016-Now</td>
 						<td>University</td>
 						<td>Da Nang City</td>
-						<td>Viet Nam</td>
 					</tr>
 			</tbody>
 
