--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 		<p >
 			Tôi có 4 người ngưỡng mộ trên thế giới đó là:
 			<ol>
-				<li>Bill Gates.</li>
+				<li>Bill Gates.
+					<p>
+						
+					</p>
+				</li>
 			 	<li>Stephen Hawking.</li>
 			 	<li>Charlice Puth.</li>
 			 	<li>Napoleon Bonaparte.</li>	
