--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			Tôi có 4 người ngưỡng mộ trên thế giới đó là:
 			<ol>
 				<li>Bill Gates:
+					<img src="BillGates.jpg" alt="Bill avatar" style="width: 150px; height: 150px;">
 					<p>
 						William Henry "Bill" Gates ((born October 28, 1955) is an American business magnate, investor, author, philanthropist, and co-founder of the Microsoft Corporation along with Paul Allen.
 					</p>
@@ -43,10 +44,6 @@
 			 	<li>Stephen Hawking:
 			 		<p>
 			 			Stephen William Hawking (born 8 January 1942) is an English theoretical physicist, cosmologist, author and Director of Research at the Centre for Theoretical Cosmology within the University of Cambridge.His scientific works include a collaboration with Roger Penrose on gravitational singularity theorems in the framework of general relativity and the theoretical prediction that black holes emit radiation, often called Hawking radiation. Hawking was the first to set out a theory of cosmology explained by a union of the general theory of relativity and quantum mechanics. He is a vigorous supporter of the many-worlds interpretation of quantum mechanics.
-			  		</p>
-
-			  		<p>
-			  			Hawking is an Honorary Fellow of the Royal Society of Arts (FRSA), a lifetime member of the Pontifical Academy of Sciences, and a recipient of the Presidential Medal of Freedom, the highest civilian award in the US. In 2002, Hawking was ranked number 25 in the BBC's poll of the 100 Greatest Britons. He was the Lucasian Professor of Mathematics at the University of Cambridge between 1979 and 2009 and has achieved commercial success with works of popular science in which he discusses his own theories and cosmology in general; his book A Brief History of Time appeared on the British Sunday Times best-seller list for a record-breaking 237 weeks.
 			  		</p>
 
 			  		<p>
