--- a/studies.html
+++ b/studies.html
@@ -10,6 +10,9 @@
 	</head>
 
 	<body>
+		<p>
+		You can see my profile in <a href="index.html"><strong>here</strong></a>
+		</p>
 		<table>
 			<thead>
 				<tr>
