new update on Wednesday

--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
 		
 			<audio controls>
 				<source src="audios/stephen_hawking.mp3" type="audio/mp3">
-			</audio>	
-		
+			</audio>
+			<p>	
+			<img src="images/stephen_hawking.jpg" alt="Stephen avatar" style="width: 350px; height: 250px;">
+			</p>
 			<p><strong>Stephen Hawking Interview</strong></p>		
 	 			
  			<p>+ Biography:</p>
@@ -107,6 +109,9 @@
 
 	  	<div id="charlice-puth">
 			<h1>Charlice Puth:</h1>
+			<p>
+			<img src="images/charlice_puth.jpg" alt="Charlice avatar" style="width: 350px; height: 250px;">	
+			</p>
 
 			<video width="520" height="330" controls>
 				<source src="videos/how_long.mp4" type="video/mp4">
@@ -143,7 +148,7 @@
 
 	 	<div id="napoleon-bonaparte">
 		 	<h1>Napoleon Bonaparte:</h1>
-		
+			<img src="images/napoleon_bonaparte.jpg" alt="Napoleon avatar" style="width: 350px; height: 250px;">
 		 	<iframe 
 		 			width="560" 
 		 			height="315" 
