New update Thursday

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<body>
 		<div id="myself">
 		<p>
-			Chào tôi tên là Đặng Hiếu Minh, tôi 19 tuổi thích màu trắng và đen.
+			Hi, My name is DANG HIEU MINH till now i'm 19 years old. My favorite color are black and white.
 		</p>
 
 		<p >
-			Tôi có một khẩu vị rất bình thường và cực kì thích ăn uống, tôi có thể ăn mọi thứ để tồn tại.	
+			Similar everybody i love food and drink. I can eat anything to live. I also love sport to.
 		</p>
 		
 		<p >
@@ -51,7 +51,7 @@
 		</p>
 
 
-		<div id="bill-gates">
+		<div id="bill-gates" class="people">
 			<h1>Bill Gates:</h1>
 
 			<img src="images/bill_gates.jpg" alt="Bill avatar" style="width: 350px; height: 250px;">
@@ -78,7 +78,7 @@
 		</div>
 
 
-		<div id="stephen-hawking">
+		<div id="stephen-hawking" class="people">
 			<h1>Stephen Hawking:</h1>	
 		
 			<audio controls>
@@ -107,7 +107,7 @@
 	  	</div>
 
 
-	  	<div id="charlice-puth">
+	  	<div id="charlice-puth" class="people">
 			<h1>Charlice Puth:</h1>
 			<p>
 			<img src="images/charlice_puth.jpg" alt="Charlice avatar" style="width: 350px; height: 250px;">	
@@ -146,7 +146,7 @@
 	 	</div>
 
 
-	 	<div id="napoleon-bonaparte">
+	 	<div id="napoleon-bonaparte" class="people">
 		 	<h1>Napoleon Bonaparte:</h1>
 			<img src="images/napoleon_bonaparte.jpg" alt="Napoleon avatar" style="width: 350px; height: 250px;">
 		 	<iframe 
