--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
 
 
 		<div id="bill-gates" class="people">
-			<h1>Bill Gates:</h1>
+			<div class="name">
+				<h2>Bill Gates:</h2>
 
-			<img src="images/bill_gates.jpg" alt="Bill avatar" style="width: 350px; height: 250px;">
-
+				<img src="images/bill_gates.jpg" alt="Bill avatar">	
+			</div>
+			<div class="biography">
 			<p>+ Biography:</p>
 			<p>
 				William Henry "Bill" Gates ((born October 28, 1955) is an American business magnate, investor, author, philanthropist, and co-founder of the Microsoft Corporation along with Paul Allen.
@@ -74,21 +76,24 @@
 			<p>
 				<a href="#myself">+ Go back to the top</a>
 			</p>
-
+			</div>
 		</div>
 
 
 		<div id="stephen-hawking" class="people">
-			<h1>Stephen Hawking:</h1>	
-		
+			<div class="name">
+			<h2>Stephen Hawking:</h2>	
 			<audio controls>
-				<source src="audios/stephen_hawking.mp3" type="audio/mp3">
+				<source src="audios/stephen_hawking.mp3" type="audio/mp3"> 
 			</audio>
-			<p>	
-			<img src="images/stephen_hawking.jpg" alt="Stephen avatar" style="width: 350px; height: 250px;">
-			</p>
-			<p><strong>Stephen Hawking Interview</strong></p>		
+			<p>Stephen Hawking Interview</p>
+			<figure>
+			<img src="images/stephen_hawking.jpg" alt="Stephen avatar">
+			<figcaption>stephen avatar</figcaption>
+					
 	 			
+			</div>
+			<div class="biography">
  			<p>+ Biography:</p>
  	 		<p>
 	 			Stephen William Hawking (born 8 January 1942) is an English theoretical physicist, cosmologist, author and Director of Research at the Centre for Theoretical Cosmology within the University of Cambridge.His scientific works include a collaboration with Roger Penrose on gravitational singularity theorems in the framework of general relativity and the theoretical prediction that black holes emit radiation, often called Hawking radiation. Hawking was the first to set out a theory of cosmology explained by a union of the general theory of relativity and quantum mechanics. He is a vigorous supporter of the many-worlds interpretation of quantum mechanics.
@@ -103,17 +108,20 @@
 			<p>
 				<a href="#myself">+ Go back to the top</a>
 			</p>
-
+			</div>
 	  	</div>
 
 
 	  	<div id="charlice-puth" class="people">
-			<h1>Charlice Puth:</h1>
-			<p>
-			<img src="images/charlice_puth.jpg" alt="Charlice avatar" style="width: 350px; height: 250px;">	
-			</p>
-
-			<video width="520" height="330" controls>
+			<div class="name">
+			<h2>Charlice Puth:</h2>
+			<figure>
+			<img src="images/charlice_puth.jpg" alt="Charlice avatar" >	
+			<figcaption>Charlice avatar</figcaption>
+			</figure>
+			</div>
+			<div class="biography">
+			<video controls>
 				<source src="videos/how_long.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 			</video>
@@ -142,40 +150,36 @@
 			<p>
 				<a href="#myself">+ Go back to the top</a>
 			</p>
-
+			</div>
 	 	</div>
 
 
 	 	<div id="napoleon-bonaparte" class="people">
-		 	<h1>Napoleon Bonaparte:</h1>
-			<img src="images/napoleon_bonaparte.jpg" alt="Napoleon avatar" style="width: 350px; height: 250px;">
-		 	<iframe 
-		 			width="560" 
-		 			height="315" 
-		 			src="https://www.youtube.com/embed/8aq_gRfmjgY" 
-		 			frameborder="0" 
-		 			gesture="media" 
-		 			allow="encrypted-media" 
-		 			allowfullscreen
-		 	></iframe>	
+		 	<div class="name">
+		 		<h2>Napoleon Bonaparte:</h2>
+		 		<figure>
+		 		<img src="images/napoleon_bonaparte.jpg" alt="Napoleon avatar">
+		 		<figcaption>Napoleon avatar</figcaption>
+		 		</figure>
+			</div>
+			<div class="biography">
+				<p>+ Biography:</p>
+	 			<p>
+	 				Napoléon Bonaparte (15 August 1769 – 5 May 1821) was a French statesman and military leader who rose to prominence during the French Revolution and led several successful campaigns during the French Revolutionary Wars. As Napoleon, he was Emperor of the French from 1804 until 1814, and again briefly in 1815 (during the Hundred Days). Napoleon dominated European and global affairs for more than a decade while leading France against a series of coalitions in the Napoleonic Wars. He won most of these wars and the vast majority of his battles, building a large empire that ruled over continental Europe before its final collapse in 1815. One of the greatest commanders in history, his wars and campaigns are studied at military schools worldwide. Napoleon's political and cultural legacy has endured as one of the most celebrated and controversial leaders in human history.
+	 			</p>
+
+	 			<p>
+	 				Napoleon had an extensive and powerful influence on the modern world, bringing liberal reforms to the numerous territories that he conquered and controlled, such as the Low Countries, Switzerland, and large parts of modern Italy and Germany. He implemented fundamental liberal policies in France and throughout Western Europe.His legal achievement, the Napoleonic Code, has influenced the legal systems of more than 70 nations around the world. British historian Andrew Roberts stated, "The ideas that underpin our modern world—meritocracy, equality before the law, property rights, religious toleration, modern secular education, sound finances, and so on—were championed, consolidated, codified and geographically extended by Napoleon. To them he added a rational and efficient local administration, an end to rural banditry, the encouragement of science and the arts, the abolition of feudalism and the greatest codification of laws since the fall of the Roman Empire".
+	 			</p>
+
+	 			<p>
+					<a href="https://en.wikipedia.org/wiki/Napoleon" target="_blank"> + See more</a>
+				</p>
 			
-	 		<p>+ Biography:</p>
-	 		<p>
-	 			Napoléon Bonaparte (15 August 1769 – 5 May 1821) was a French statesman and military leader who rose to prominence during the French Revolution and led several successful campaigns during the French Revolutionary Wars. As Napoleon, he was Emperor of the French from 1804 until 1814, and again briefly in 1815 (during the Hundred Days). Napoleon dominated European and global affairs for more than a decade while leading France against a series of coalitions in the Napoleonic Wars. He won most of these wars and the vast majority of his battles, building a large empire that ruled over continental Europe before its final collapse in 1815. One of the greatest commanders in history, his wars and campaigns are studied at military schools worldwide. Napoleon's political and cultural legacy has endured as one of the most celebrated and controversial leaders in human history.
-	 		</p>
-
-	 		<p>
-	 			Napoleon had an extensive and powerful influence on the modern world, bringing liberal reforms to the numerous territories that he conquered and controlled, such as the Low Countries, Switzerland, and large parts of modern Italy and Germany. He implemented fundamental liberal policies in France and throughout Western Europe.His legal achievement, the Napoleonic Code, has influenced the legal systems of more than 70 nations around the world. British historian Andrew Roberts stated, "The ideas that underpin our modern world—meritocracy, equality before the law, property rights, religious toleration, modern secular education, sound finances, and so on—were championed, consolidated, codified and geographically extended by Napoleon. To them he added a rational and efficient local administration, an end to rural banditry, the encouragement of science and the arts, the abolition of feudalism and the greatest codification of laws since the fall of the Roman Empire".
-	 		</p>
-
-	 		<p>
-				<a href="https://en.wikipedia.org/wiki/Napoleon" target="_blank"> + See more</a>
-			</p>
-			
-			<p>
-				<a href="#myself">+ Go back to the top</a>
-			</p>
-
+				<p>
+					<a href="#myself">+ Go back to the top</a>
+				</p>
+			</div>
 	 	</div>
 			
 	</body>
