new update and need some help

--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@
 		<div id="bill-gates" class="people">
 			<div class="name">
 				<h2>Bill Gates:</h2>
-
-				<img src="images/bill_gates.jpg" alt="Bill avatar">	
+				<audio controls>
+					<source src="audios/bill_gates.mp3" type="audio/mp3">
+				</audio>
+					<p>10 facts about Bill Gates.</p>
+				<figure>	
+					<img id="bill_big" src="images/bill_gates.jpg" alt="Bill avatar">
+					<img id="bill_small" src="images/bill_gates_s.jpg" alt="Bill small">	
+					<figcaption>Bill Gates avatar</figcaption>
+				</figure>
 			</div>
 			<div class="biography">
 			<p>+ Biography:</p>
@@ -89,9 +96,8 @@
 			<p>Stephen Hawking Interview</p>
 			<figure>
 			<img src="images/stephen_hawking.jpg" alt="Stephen avatar">
-			<figcaption>stephen avatar</figcaption>
-					
-	 			
+			<figcaption>stephen avatar</figcaption>	
+			</figure>	
 			</div>
 			<div class="biography">
  			<p>+ Biography:</p>
@@ -163,6 +169,9 @@
 		 		</figure>
 			</div>
 			<div class="biography">
+				<video controls>
+					<source src="videos/napoleon.mp4" type="video/mp4">
+				</video>
 				<p>+ Biography:</p>
 	 			<p>
 	 				Napoléon Bonaparte (15 August 1769 – 5 May 1821) was a French statesman and military leader who rose to prominence during the French Revolution and led several successful campaigns during the French Revolutionary Wars. As Napoleon, he was Emperor of the French from 1804 until 1814, and again briefly in 1815 (during the Hundred Days). Napoleon dominated European and global affairs for more than a decade while leading France against a series of coalitions in the Napoleonic Wars. He won most of these wars and the vast majority of his battles, building a large empire that ruled over continental Europe before its final collapse in 1815. One of the greatest commanders in history, his wars and campaigns are studied at military schools worldwide. Napoleon's political and cultural legacy has endured as one of the most celebrated and controversial leaders in human history.
