--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   		<title>MyProfile.com</title>
   		 <link rel="stylesheet" type="text/css" href="css/app.css">
   		 <link rel="stylesheet" type="text/css" href="css/index.css">
+  		 <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css">
 	</head>
 
 	<body>
@@ -51,7 +52,7 @@
 		</p>
 
 
-		<div id="bill-gates" class="people">
+		<div id="bill-gates" class="people hidden">
 			<div class="name">
 				<h2>Bill Gates:</h2>
 				<audio controls>
@@ -87,7 +88,7 @@
 		</div>
 
 
-		<div id="stephen-hawking" class="people">
+		<div id="stephen-hawking" class="people hidden">
 			<div class="name">
 			<h2>Stephen Hawking:</h2>	
 			<audio controls>
@@ -118,7 +119,7 @@
 	  	</div>
 
 
-	  	<div id="charlice-puth" class="people">
+	  	<div id="charlice-puth" class="people hidden">
 			<div class="name">
 			<h2>Charlice Puth:</h2>
 			<figure>
@@ -160,7 +161,7 @@
 	 	</div>
 
 
-	 	<div id="napoleon-bonaparte" class="people">
+	 	<div id="napoleon-bonaparte" class="people hidden">
 		 	<div class="name">
 		 		<h2>Napoleon Bonaparte:</h2>
 		 		<figure>
