--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<head>
   		<meta charset="UTF-8">
   		<title>MyProfile.com</title>
+  		 <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css">
+
   		 <link rel="stylesheet" type="text/css" href="css/app.css">
   		 <link rel="stylesheet" type="text/css" href="css/index.css">
-  		 <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css">
-	</head>
+  	</head>
 
 	<body>
 		<div id="myself">
@@ -34,7 +35,7 @@
 		<p >
 			Tôi có 4 người ngưỡng mộ trên thế giới đó là:
 
-			<ol>
+			<ol id="people-menu">
 
 				<li>
 					<a href="#bill-gates">Bill Gates:</a>
