new update bootstrap grid

--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
 		</p>
 
 		<p >
-			Similar everybody i love food and drink. I can eat anything to live. I also love sport to.
+			Similar everybody i love food and drink. I can eat anything to live. I also love sport to but i'm not really good at any sports. My favorite subject when i was young is Physical. I love it because all my member in my family follow in this major. Now i'm second year student and learning Computer Science Engineering at VNUK aka Viet Nam United Kingdom institute of researching and education. 
 		</p>
 		
 		<p >
-			Hiện tại tôi đang học ở VNUK chuyên ngành kĩ sư tin học.	
+			I usually playing video game, reading book when i have free time.	
 		</p>
 		
-		<p >
-			Tôi thích chơi thể thao nhưng thực sự không giỏi ở môn nào, ngoài ra tôi cũng thích chơi game xem phim và đọc sách. Thể loại truyện ưa thích của tôi là tiểu thuyết và manga. 	
-		</p>
+		
 		<p>
 			You can see my studies profile in <a href="studies.html">here</a>
 		</p>
@@ -61,8 +59,8 @@
 				</audio>
 					<p>10 facts about Bill Gates.</p>
 				<figure>	
-					<img id="bill_big" src="images/bill_gates.jpg" alt="Bill avatar">
-					<img id="bill_small" src="images/bill_gates_s.jpg" alt="Bill small">	
+					<img id="bill-ava" alt="Bill avatar">
+						
 					<figcaption>Bill Gates avatar</figcaption>
 				</figure>
 			</div>
@@ -97,7 +95,7 @@
 			</audio>
 			<p>Stephen Hawking Interview</p>
 			<figure>
-			<img src="images/stephen_hawking.jpg" alt="Stephen avatar">
+			<img id="stephen-ava" alt="Stephen avatar">
 			<figcaption>stephen avatar</figcaption>	
 			</figure>	
 			</div>
@@ -124,7 +122,7 @@
 			<div class="name">
 			<h2>Charlice Puth:</h2>
 			<figure>
-			<img src="images/charlice_puth.jpg" alt="Charlice avatar" >	
+			<img id="charlice-ava" alt="Charlice avatar" >	
 			<figcaption>Charlice avatar</figcaption>
 			</figure>
 			</div>
@@ -166,7 +164,7 @@
 		 	<div class="name">
 		 		<h2>Napoleon Bonaparte:</h2>
 		 		<figure>
-		 		<img src="images/napoleon_bonaparte.jpg" alt="Napoleon avatar">
+		 		<img id="napoleon-ava" alt="Napoleon avatar">
 		 		<figcaption>Napoleon avatar</figcaption>
 		 		</figure>
 			</div>
