--- a/studies.html
+++ b/studies.html
@@ -5,6 +5,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>MyStudingStory</title>
+		<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css">
+
+
 		<link rel="stylesheet" type="text/css" href="css/studies.css">
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 	</head>
@@ -16,41 +19,123 @@
 		<table>
 			<thead>
 				<tr>
-					<th>Year</th>
-					<th>School</th>
-					<th>Town</th>
-					<th>Country</th>
+					<th>
+						<div class="col-lg-3 col-md-3 col-sm-1">
+							Year
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-1">
+							School
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-1">
+							Town
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-1">
+							Country
+						</div>
+					</th>
 				</tr>
 			</thead>
+			
 
+			
 			<tbody>
 				
 				<tr>
-					<td>2002-2007</td>
-					<td>kindergaten</td>
-					<td rowspan="4">Quy Nhon City</td>
-					<td rowspan="5">Viet Nam</td>
+					<td>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							2002-2007
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							kindergaten
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Quy Nhon City
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Viet Nam
+						</div>
+					</td>
 				</tr>
 
 				<tr>
-					<td>2007-2011</td>
-					<td>primary school</td>
+					<td>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							2002-2007
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							kindergaten
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Quy Nhon City
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Viet Nam
+						</div>
+					</td>
 				</tr>
-
 				<tr>
-					<td>2011-2014</td>
-					<td>secondary school</td>
+					<td>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							2007-2011
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							primary school
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Quy Nhon City
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Viet Nam
+						</div>
+					</td>
 				</tr>
-
 				<tr>
-					<td>2014-2016</td>
-					<td>high school</td>
+					<td>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							2011-2014
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							secondary school
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Quy Nhon City
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Viet Nam
+						</div>
+					</td>
 				</tr>
-
 				<tr>
-					<td>2016-Now</td>
-					<td>University</td>
-					<td>Da Nang City</td>
+					<td>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							2014-2016
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							high school
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Quy Nhon City
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Viet Nam
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							2016-Now
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							University
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Da Nang City
+						</div>
+						<div class="col-lg-3 col-md-2 col-sm-1">
+							Viet Nam
+						</div>
+					</td>
 				</tr>
 
 			</tbody>
